--- a/src/App.css
+++ b/src/App.css
@@ -84,3 +84,109 @@ body {
   object-fit: cover;
   height: 1.75rem;
 }
+
+.lowerside {
+  padding: 2rem;
+}
+
+.listItems {
+  margin: 2rem;
+  display: flex;
+  align-items: center;
+  font-size: 1.25rem;
+}
+
+.listItemsImg {
+  margin: 1rem;
+  padding-right: 1rem;
+}
+
+.listItems:nth-child(1) > .listItemsImg {
+  margin-right: 0.5rem;
+}
+.listItems:nth-child(3) > .listItemsImg {
+  margin-right: 0.75rem;
+}
+
+.main {
+  min-height: calc(100vh - 14rem);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 6rem 10rem;
+  margin-bottom: 1rem;
+}
+
+.chats {
+  overflow: hidden;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+  width: 200%;
+  max-width: 80rem;
+  height: (100vh - 15rem);
+}
+
+.chats::-webkit-scrollbar {
+  display: none;
+}
+
+.chat {
+  margin: 1rem;
+  padding: 2rem 3rem;
+  font-size: 1.5rem;
+  display: flex;
+  align-items: flex-start;
+  text-align: justify;
+}
+
+.chatimg {
+  object-fit: cover;
+  width: 4rem;
+  margin-right: 2rem;
+  border-radius: 1rem;
+  background-color: white;
+}
+
+.bot {
+  background: rgba(28, 30, 58, 1);
+  width: fit-content;
+  border-radius: 0.5rem;
+}
+
+.chatFooter {
+  margin-top: auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.inp {
+  padding: 0.5rem;
+  background: rgba(28, 30, 58, 1);
+  display: flex;
+  align-items: center;
+  border-radius: 0.5rem;
+  width: 80rem;
+}
+
+.inp > input {
+  flex-grow: 1;
+  outline: none;
+  padding: 1.25rem;
+  color: white;
+  background: transparent;
+  border: none;
+}
+
+.send {
+  background: transparent;
+  border: none;
+  margin-left: auto;
+  margin-right: 1rem;
+}
+
+.chatFooter > p {
+  margin: 2rem 0;
+}
